--- a/index.html
+++ b/index.html
@@ -17,29 +17,34 @@
 </head>
 
 <body>
-    <div class="profile-card">
-        <div class="header">
-            <h1> Join our community</h1>
-            <h2>30-day, hassle-free money back guarantee</h2>
-            <h3>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</h3>
-        </div>
+    <div class="fill">
+        <div class="profile-card">
+            <div class="header">
+                <h1> Join our community</h1>
+                <h2>30-day, hassle-free money back guarantee</h2>
+                <h3>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</h3>
+            </div>
 
-        <div class="box-1">
-            <h4>Monthly Subscription</h4>
-            <h5>$29</h5>
-            <p class="month">per month</p>
-            <p class="accessFull access for less than $1 a day"></p>
-            <button class="signup">Sign Up</button>
-        </div>
-        <div class="box-2">
-            <h4>Why Us</h4>
-            <p>Tutorials by industry experts Peer & expert code review Coding exercises Access to our GitHub repos Community forum Flashcard decks New videos every week</p>
+            <div class="box-1">
+                <h4>Monthly Subscription</h4>
+                <h5>$29</h5>
+                <p class="month">per month</p>
+
+                <p class="access" Full access for less than $1 a day></p>
+
+                <button class="signup ">Sign Up</button>
+            </div>
+            <div class="box-2 ">
+                <h4>Why Us</h4>
+                <p>Tutorials by industry experts Peer & expert code review Coding exercises Access to our GitHub repos Community forum Flashcard decks New videos every week</p>
+
+            </div>
 
         </div>
 
 
     </div>
-    <footer class="footer"> Challenge by Frontend Mentor. Coded by <a href="https://github.com/michalcichocki/">Michal Cichocki</a>.</footer>
+    <footer class="footer "> Challenge by Frontend Mentor. Coded by <a href="https://github.com/michalcichocki/ ">Michal Cichocki</a>.</footer>
 
 
 </body>
